--- a/404NotFound/src/main/resources/application.properties
+++ b/404NotFound/src/main/resources/application.properties
@@ -54,8 +54,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # =========================
 # 애플리케이션 커스텀 설정
 # =========================
-# 삭제 권한용 "관리자 사번" (필수)
-app.admin-employee-id=9001
+# 관리자 사번(승인/반려/삭제 특권)
+app.admin-employee-id=20250001
 
 # 파일 업로드
 app.upload-dir=uploads
