--- a/404NotFound/src/main/resources/application.properties
+++ b/404NotFound/src/main/resources/application.properties
@@ -61,3 +61,7 @@ app.admin-employee-id=20250001
 app.upload-dir=uploads
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
+
+# NEW 배지 유지시간 (ISO-8601 Duration 표기)
+# PT24H = 24시간, PT3H = 3시간, PT30M = 30분, PT90S = 90초, PT1S = 1초
+app.new-badge-duration=PT24H
