--- a/projectreact/package.json
+++ b/projectreact/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "@stomp/stompjs": "^7.1.1",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
