reCAPTCHA 기능 추가 Signup.jsx, application.properties, EmployeeController 수정 HttpClientConfig, RecaptchaDTO, RecaptchaService 만듬 2025.09.19

--- a/404NotFound/src/main/resources/application.properties
+++ b/404NotFound/src/main/resources/application.properties
@@ -59,3 +59,7 @@ spring.servlet.multipart.max-request-size=20MB
 # NEW 배지 유지시간 (ISO-8601 Duration 표기)
 # PT24H = 24시간, PT3H = 3시간, PT30M = 30분, PT90S = 90초, PT1S = 1초
 app.new-badge-duration=PT24H
+
+# reCAPTCHA
+recaptcha.secret=${RECAPTCHA_SECRET:6LceXc4rAAAAAI8eyJWmwUH1Zx4aJCsV-w3WlHut}   # 운영에선 환경변수로 주입 권장
+recaptcha.verify-url=https://www.google.com/recaptcha/api/siteverify
