--- a/projectreact/.env
+++ b/projectreact/.env
@@ -1,2 +1,3 @@
 VITE_GOOGLE_MAPS_API_KEY=AIzaSyApetvzgAYf9QGbz9grSQRsnFfcJT9IWrY
 VITE_API_BASE=http://localhost:8080
+VITE_RECAPTCHA_SITE_KEY=6LceXc4rAAAAAL3iTkTn-bRfAgLHCjWinES7Py_o
