일정 기능 추가 2025.09.22

--- a/404NotFound/src/main/resources/application.properties
+++ b/404NotFound/src/main/resources/application.properties
@@ -63,3 +63,26 @@ app.new-badge-duration=PT24H
 # reCAPTCHA
 recaptcha.secret=${RECAPTCHA_SECRET:6LceXc4rAAAAAI8eyJWmwUH1Zx4aJCsV-w3WlHut}   # 운영에선 환경변수로 주입 권장
 recaptcha.verify-url=https://www.google.com/recaptcha/api/siteverify
+
+# =========================
+# 세션 관련 쿠키 설정
+# =========================
+server.servlet.session.cookie.sameSite=none
+server.servlet.session.cookie.secure=true
+server.servlet.session.timeout=PT30M
+
+# =========================
+# 오류 원인 추적용(개발용만)
+# =========================
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-exception=true
+server.error.include-stacktrace=ALWAYS
+
+# =========================
+# 날짜/시간 포맷
+# =========================
+spring.mvc.date-format=yyyy-MM-dd'T'HH:mm:ss
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss
+
