--- a/projectreact/package.json
+++ b/projectreact/package.json
@@ -28,7 +28,8 @@
     "react-google-recaptcha": "^3.1.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.8.0",
-    "sockjs-client": "^1.6.1"
+    "sockjs-client": "^1.6.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
