20250923_name error fix_AhnHyeonJun

--- a/404NotFound/src/main/resources/application.properties
+++ b/404NotFound/src/main/resources/application.properties
@@ -61,7 +61,7 @@ spring.servlet.multipart.max-request-size=20MB
 app.new-badge-duration=PT24H
 
 # reCAPTCHA
-recaptcha.secret=${RECAPTCHA_SECRET:6LceXc4rAAAAAI8eyJWmwUH1Zx4aJCsV-w3WlHut}   # 운영에선 환경변수로 주입 권장
+recaptcha.secret=${RECAPTCHA_SECRET:6LceXc4rAAAAAI8eyJWmwUH1Zx4aJCsV-w3WlHut}
 recaptcha.verify-url=https://www.google.com/recaptcha/api/siteverify
 
 # =========================
