도커 수정 거의 완료

--- a/404NotFound/src/main/resources/application.properties
+++ b/404NotFound/src/main/resources/application.properties
@@ -61,15 +61,15 @@ spring.servlet.multipart.max-request-size=20MB
 app.new-badge-duration=PT24H
 
 # reCAPTCHA
-recaptcha.secret=${RECAPTCHA_SECRET:6LceXc4rAAAAAI8eyJWmwUH1Zx4aJCsV-w3WlHut}
+recaptcha.secret=${RECAPTCHA_SECRET:6Lf8ZNMrAAAAAJAo1DVqav4X530XTHUje1XbFuUm}
 recaptcha.verify-url=https://www.google.com/recaptcha/api/siteverify
 
 # =========================
 # 세션 관련 쿠키 설정
 # =========================
-server.servlet.session.cookie.sameSite=none
-server.servlet.session.cookie.secure=true
-server.servlet.session.timeout=PT30M
+server.servlet.session.cookie.sameSite=lax
+server.servlet.session.cookie.secure=false
+server.servlet.session.timeout=-1
 
 # =========================
 # 오류 원인 추적용(개발용만)
